cinnamon: Fix jumpy :hovered panel launcher icons

--- a/common/cinnamon/3.4/sass/_common.scss
+++ b/common/cinnamon/3.4/sass/_common.scss
@@ -1438,7 +1438,6 @@ StScrollBar {
 }
 
 .launcher {
-  margin: 1px;
   padding: 1px;
   transition-duration: 200;
 
